Archive2/9a/50cd846788671c/output
main.cpp: In function ‘int main()’:
main.cpp:13:5: error: static assertion failed: 2*2 != 4
     static_assert(two_t::value*2 == four_t::value,
     ^
